
0.10.2c Jan 10, 2010
 * fixed missing configuration option copying from the initial config
   to the final configuration.  --remove-obsolete and --retry were not
   being honored.

0.10.2b Oct 17, 2009
 * modified disk checking mechanism so that the working directory filesystem
   is checked for downloads and then / is checked for the uncompressed size.
   This is not 100% ideal since /usr may be on another filestem but it should
   make Tadgy slightly happier.  Added slapt_disk_space_check to public API.

0.10.2a Sep 14, 2009
 * updated el translation from George Vlahavas
 * updated es_ES translation from Angelos
 * added --filelist option using slapt_get_pkg_filelist
 * added slapt_get_pkg_filelist() from Anders F. Bjorklund
 * normalize search routine when doing package lookups by details instead
   of just name and version.  This fixes a bug in gslapt that causes the
   package lookup to fail for two similar packages.

0.10.2 Aug 15, 2009
 * do not exit immediately if we cannot open the default slapt-getrc, check
   instead if --config was used, otherwise exit (thanks Vasileios Porpodas)
 * for consistency error out when --install is passed a package that
   does not exist (George)
 * updated conflict detection so that multiple conflicts are handled
   correctly (thanks Steve)
 * do not print empty strings as suggestions
 * free priority strings and resources when parsing is complete
 * updated Greek translation from George Vlahavas

0.10.1c Jul 12, 2009
 * updated default and example rc settings for slackware64
 * updated conflicts and suggests parsing to fix certain PACKAGES.TXT formatting

0.10.1b May 23, 2009
 * updated parsing of compressed and uncompressed sizes in
   /var/log/packages entries 
 * fixed handling of a plus sign in package location (path) in MD5
   (Ondrej Zary)
 * fixed small issues in FAQ#17 script

0.10.1a Apr 28, 2009
 * modernized script in FAQ#17. How do I create my own package source?